# SNP_backend_internship

./: .pre-commit-config.yaml  README.md  pyproject.toml  task_01.py  task_02.py  task_03.py  task_04.py  task_05.py  task_06.py  task_07.py  task_08.py  task_09.py  task_10.py  task_11.py  task_12.py  task_13.py  task_14.py  task_15.py
tests/: test_task_01.py  test_task_02.py  test_task_03.py  test_task_04.py  test_task_05.py  test_task_06.py  test_task_07.py  test_task_08.py  test_task_09.py  test_task_10.py  test_task_11.py  test_task_12.py  test_task_13.py  test_task_14.py  test_task_15.py
